--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>Belajar HTML</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>Belajar</h1>
